[gd_scene load_steps=2 format=3 uid="uid://cuv0y0akcj4du"]

[ext_resource type="Script" uid="uid://cn0fwq0al86o6" path="res://scripts/tower_info_display.gd" id="1_dfuia"]

[node name="TowerInfoDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 180.0
script = ExtResource("1_dfuia")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Tower Info"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TowerName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name: Basic Tower"

[node name="TowerLevel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level: 1"

[node name="TowerDamage" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Damage: 10"

[node name="TowerRange" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Range: 300"

[node name="TowerFireRate" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fire Rate: 1.0/s"

[node name="TowerSpecial" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Slow: 50%"
